# deadsimple

./: .gitignore  404.html  CHANGELOG.md  CNAME  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: gh-pages.yaml
class_dependencies/: index.html
docs/: class_dependencies.md  index.md
docs/patterns/: conditional_dependencies.md
patterns/conditional_dependencies/: index.html
search/: search_index.json
src/deadsimple/: __init__.py  context.py  exceptions.py  lazy.py  resolve.py
src/tests/: benchmarks.py  lazy_test.py  resolve_class_test.py  resolve_open_test.py  resolve_test.py  resolve_yield_test.py  singleton_test.py
