[tool.poetry]
name = "deadsimple"
version = "0.1.4"
description = "A dependency injection library, aimed for the least amount of magic"
authors = ["Nitzan Zada <nitzan.zada@gmail.com>"]
keywords = ["dependency_injection"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mastern2k3/deadsimple"
repository = "https://github.com/mastern2k3/deadsimple"
include = [
    "LICENSE",
]
packages = [
    { include = "deadsimple", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
line-profiler = "^3.3.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
include = '\.pyi?$'
